<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <!-- Header starts -->

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/beeter_logo"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />
        <!-- Header ends -->
        <!-- Login form -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="30dip">

            <TextView
                android:id="@+id/lUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_l_username" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                android:id="@+id/lPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_l_password" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/bLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dip"
                android:onClick="signIn"
                android:text="@string/login_l_signin" />

            <TextView
                android:id="@+id/lLinkRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dip"
                android:layout_marginTop="40dip"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/login_l_register"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0b84aa" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>